@@ -4,7 +4,7 @@ record(ai, "BLD:SYS0:$(LOCA):PCAV_CHARGE1") {
   field(DTYP, "BLD_PCAV")
   field(INP,  "@PCAV_CHARGE1")
   field(PREC, "5")
-  field(TSE,  "-2")
+  field(TSE,  "-1")
   field(EGU,  "nC")
   field(FLNK, "BLD:SYS0:$(LOCA):EFPCAV_CHARGE1")
   field(PRIO, "HIGH")
@@ -16,7 +16,7 @@ record(ai, "BLD:SYS0:$(LOCA):PCAV_CHARGE2") {
   field(DTYP, "BLD_PCAV")
   field(INP,  "@PCAV_CHARGE2")
   field(PREC, "5")
-  field(TSE,  "-2")
+  field(TSE,  "-1")
   field(EGU,  "nC")
   field(FLNK, "BLD:SYS0:$(LOCA):EFPCAV_CHARGE2")
   field(PRIO, "HIGH")
@@ -28,7 +28,7 @@ record(ai, "BLD:SYS0:$(LOCA):PCAV_FITTIME1") {
   field(DTYP, "BLD_PCAV")
   field(INP,  "@PCAV_FITTIME1")
   field(PREC, "5")
-  field(TSE,  "-2")
+  field(TSE,  "-1")
   field(EGU,  "nC")
   field(FLNK, "BLD:SYS0:$(LOCA):EFPCAV_FITTIME1")
   field(PRIO, "HIGH")
@@ -40,7 +40,7 @@ record(ai, "BLD:SYS0:$(LOCA):PCAV_FITTIME2") {
   field(DTYP, "BLD_PCAV")
   field(INP,  "@PCAV_FITTIME2")
   field(PREC, "5")
-  field(TSE,  "-2")
+  field(TSE,  "-1")
   field(EGU,  "nC")
   field(FLNK, "BLD:SYS0:$(LOCA):EFPCAV_FITTIME2")
   field(PRIO, "HIGH")
@@ -52,7 +52,7 @@ record(ai, "BLD:SYS0:$(LOCA):PCAV_PULSEID") {
   field(DTYP, "BLD_PCAV")
   field(INP,  "@PCAV_PULSEID")
   field(PREC, "5")
-  field(TSE,  "-2")
+  field(TSE,  "-1")
   field(EGU,  "nC")
   field(FLNK, "BLD:SYS0:$(LOCA):EFPCAV_PULSEID")
   field(PRIO, "HIGH")
@@ -64,7 +64,7 @@ record(ai, "BLD:SYS0:$(LOCA):PCAV_STATUS") {
   field(DTYP, "BLD_PCAV")
   field(INP,  "@PCAV_STATUS")
   field(PREC, "5")
-  field(TSE,  "-2")
+  field(TSE,  "-1")
   field(EGU,  "nC")
   field(FLNK, "BLD:SYS0:$(LOCA):EFPCAV_STATUS")
   field(PRIO, "HIGH")
@@ -128,6 +128,68 @@ record(longout, "BLD:SYS0:$(LOCA):PCAV_LATAVGCNTRST") {
 	field(SCAN, "Passive")
 	field(DTYP, "BusAddress")
 	field(OUT,  "#C0S2@pcav_latavgcnt_f,m32")
+	field(VAL,  "0")
+	field(PINI, "YES")
+}
+
+record(longin, "BLD:SYS0:$(LOCA):PCAV_MAX") {
+	field(DESC, "Max. PCAV BLD Latency")
+	field(EGU,  "uS")
+	field(SCAN, "$(STAT_SCAN)")
+	field(DTYP, "BusAddress")
+	field(INP,  "#C0S2@pcav_max_f,m32")
+}
+
+# just write .PROC
+record(longout, "BLD:SYS0:$(LOCA):PCAV_MAXRST") {
+	field(DESC, "Rst. Max. PCAV BLD Latency")
+	field(SCAN, "Passive")
+	field(DTYP, "BusAddress")
+	field(OUT,  "#C0S2@pcav_max_f,m32")
+	field(VAL,  "0")
+	field(PINI, "YES")
+}
+
+record(longin, "BLD:SYS0:$(LOCA):PCAV_MIN") {
+	field(DESC, "Min. PCAV BLD Latency")
+	field(EGU,  "uS")
+	field(SCAN, "$(STAT_SCAN)")
+	field(DTYP, "BusAddress")
+	field(INP,  "#C0S2@pcav_min_f,m32")
+}
+
+# just write .PROC
+record(longout, "BLD:SYS0:$(LOCA):PCAV_MINRST") {
+	field(DESC, "Rst. Min. PCAV BLD Latency")
+	field(SCAN, "Passive")
+	field(DTYP, "BusAddress")
+	field(OUT,  "#C0S2@pcav_min_f,m32")
+	field(VAL,  "-1")
+	field(PINI, "YES")
+}
+
+record(longin, "BLD:SYS0:$(LOCA):PCAV_AVG") {
+	field(DESC, "Num. PCAV BLD Lat above avg")
+	field(EGU,  "uS")
+	field(SCAN, "$(STAT_SCAN)")
+	field(DTYP, "BusAddress")
+	field(INP,  "#C0S2@pcav_avg_f,m32")
+}
+
+record(longin, "BLD:SYS0:$(LOCA):PCAV_DELAVGCNT") {
+	field(DESC, "Num. PCAV BLD Lat above avg")
+	field(EGU,  "uS")
+	field(SCAN, "$(STAT_SCAN)")
+	field(DTYP, "BusAddress")
+	field(INP,  "#C0S2@pcav_delayed_f,m32")
+}
+
+# just write .PROC
+record(longout, "BLD:SYS0:$(LOCA):PCAV_DELAVGCNTRST") {
+	field(DESC, "Rst. Num. PCAV BLD Lat above avg")
+	field(SCAN, "Passive")
+	field(DTYP, "BusAddress")
+	field(OUT,  "#C0S2@pcav_delayed_f,m32")
 	field(VAL,  "0")
 	field(PINI, "YES")
 }
